# glycowork

./: .coveragerc  .gitignore  00_core.ipynb  01_alignment.ipynb  01_glycan_data.ipynb  02_glycan_data.ipynb  02_ml.ipynb  03_ml.ipynb  03_motif.ipynb  04_motif.ipynb  04_network.ipynb  05_example.ipynb  05_examples.ipynb  06_network.ipynb  CHANGELOG.html  CHANGELOG.md  CITATION.bib  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  _quarto.yml  core.html  docker-compose.yml  examples.html  glycan_data.html  glycowork.py  index.html  index.ipynb  ml.html  motif.html  nbdev.yml  network.html  pyproject.toml  robots.txt  search.json  settings.ini  setup.cfg  setup.py  (+3 more)
.github/: pull_request_template.md
.github/workflows/: changelog.yml  deploy.yaml  main.yml  pr_branch_check.yml  test.yaml  testing.yml
_docs/: CONTRIBUTING.html  glycan_data.html  ml.html  network.html  search.json  sitemap.xml
_proc/: .gitignore  00_core.ipynb  01_glycan_data.ipynb  02_ml.ipynb  03_motif.ipynb  04_network.ipynb  05_examples.ipynb  CONTRIBUTING.md  README.md  index.ipynb  nbdev.yml  settings.ini  setup  sidebar.yml
_proc/.quarto/idx/: 00_core.ipynb.json
_proc/.quarto/xref/: 2c7d6167  INDEX
_proc/_docs/: CONTRIBUTING.html  core.html  examples.html  glycan_data.html  index.html  ml.html  motif.html  network.html  search.json  sitemap.xml  styles.css
_proc/_docs/site_libs/bootstrap/: bootstrap.min.css
_proc/docs/: CONTRIBUTING.html  core.html  examples.html  glycan_data.html  index.html  ml.html  motif.html  network.html  search.json  sitemap.xml
_proc/glycowork/: network
docs/: _config.yml  alignment.html  core.html  example.html  examples.html  glycan_data.html  index.html  ml.html  motif.html  network.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/source/: conf.py
glycowork/: __init__.py  _modidx.py  _nbdev.py  alignment.py  core.py  examples.py  glycan_data.py  glycowork.py  ml.py  motif.py  network.py
glycowork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
glycowork/alignment/: glysum.py
glycowork/glycan_data/: Ab_array_Arabidopsis_thaliana _roots_PMID37608048.csv  data_entry.py  glycan_motifs.csv  glycogym.py  glycomics_HIV_gagtransfection_N_PMID35112714.csv  glycomics_HIV_gagtransfection_O_PMID35112714.csv  glycomics_cell_lines_gRNA_GPST000463.csv  glycomics_human_brain_GSL_PMID38343116.csv  glycomics_human_brain_GSL_PMID40207879.csv  glycomics_human_brain_N_PMID38343116.csv  glycomics_human_brain_O_PMID38343116.csv  glycomics_human_colorectal_N_PMID26085185.csv  glycomics_human_colorectal_N_PMID39947398.csv  glycomics_human_colorectal_O_PMC9254241.csv  glycomics_human_colorectal_O_PMID19152289.csv  glycomics_human_gastric_O_PMC4816881.csv  glycomics_human_gastric_O_PMC5762837.csv  glycomics_human_gastric_O_PMC7226152.csv  glycomics_human_gastric_O_PMID28461410.csv  glycomics_human_leukemia_GSL_PMID36788594.csv  glycomics_human_leukemia_N_PMID34646384.csv  glycomics_human_leukemia_N_PMID36788594.csv  glycomics_human_leukemia_O_PMID34646384.csv  glycomics_human_leukemia_O_PMID36788594.csv  glycomics_human_liver_O_PMC5383776.csv  glycomics_human_liver_O_PMC9254241.csv  glycomics_human_macrophages_N_2024-11-28-625934.csv  glycomics_human_macrophages_O_2024-11-28-625934.csv  glycomics_human_neutrophils_N_PMID37639587.csv  glycomics_human_ovarian_O_PMC4468167.csv  glycomics_human_pbmc_cancer_N_PMID39947398.csv  glycomics_human_platelets_N_PMID36952551.csv  glycomics_human_platelets_O_PMID36952551.csv  glycomics_human_prostate_N_PMC8010466.csv  glycomics_human_prostate_O_PMC8010466.csv  glycomics_human_retina_GSL_PMC5173345.csv  glycomics_human_serum_N_PMID39877544.csv  glycomics_human_serum_bacteremia_N_PMID33535571.csv  glycomics_human_skin_O_PMC5871710.csv  glycomics_human_skin_O_PMC5871710_SCC.csv  (+30 more)
glycowork/helper/: func.py
glycowork/ml/: NSequonPred_batch32.pt  glycowork_lectinoracle_565.pt  glycowork_lectinoracle_600.pt  glycowork_lectinoracle_background_correction.csv  glycowork_sweetnet_species.pt  inference.py  model_training.py  models.py  processing.py  representation.py  train_test_split.py
glycowork/ml/gifflar/: data.py  hetero.py  model.py
glycowork/motif/: __init__.py  analysis.py  annotate.py  backup_gids.json  common_names.json  draw.py  glyconnect_to_glytoucan.json  graph.py  mz_to_composition.csv  processing.py  query.py  re.py  regex.py  tokenization.py  wurcs_tokens.json
glycowork/network/: biosynthesis.py  evolution.py  monolink_to_enzyme.csv
glycowork/tests/: temp.py  test_alignment.py  test_analysis.py  test_annotate.py  test_biosynthesis.py  test_graph.py  test_hierarchyfilter.py  test_loader.py  test_processing.py
glycowork_Bribak.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_alignment.py  test_core_functions.py  test_hierarchyfilter.py  test_semantics.py
