[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "glycowork"
version = "1.6.0"
description = "Package for processing and analyzing glycans"
readme = "README.md"
authors = [
    {name = "Daniel Bojar", email = "daniel.bojar@gu.se"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn",
    "networkx>=3.0",
    "statsmodels",
    "scipy",
    "seaborn",
    "xgboost",
    "mpld3",
    "pandas>=1.3",
    "matplotlib-inline",
    "setuptools>=64.0",
    "huggingface_hub>=0.16.0",
    "drawSvg~=2.0",
    "Pillow",
    "openpyxl",
    "glycorender>=0.1.3"
]

[project.urls]
Homepage = "https://github.com/BojarLab/glycowork"

[project.optional-dependencies]
all = [
    "torch_geometric",
    "torch",
    "glyles",
    "pubchempy",
    "requests",
    "py3Dmol"
]
dev = [
    "torch_geometric",
    "torch",
    "glyles",
    "pubchempy",
    "requests",
    "py3Dmol",
    "pytest"
]
ml = [
    "torch_geometric",
    "torch"
]
chem = [
    "glyles",
    "pubchempy",
    "requests",
    "py3Dmol"
]

[tool.setuptools]
include-package-data = true
package-data = {"*" = ["*.csv", "*.pkl", "*.jpg", "*.pt", "*.json"]}