[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "glycowork"
version = "1.6.3"
description = "Package for processing and analyzing glycans"
readme = "README.md"
authors = [
    {name = "Daniel Bojar", email = "daniel.bojar@gu.se"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "networkx>=3.0",
    "statsmodels",
    "scipy",
    "seaborn",
    "bokeh",
    "IPython",
    "pandas>=1.3",
    "setuptools>=64.0",
    "huggingface_hub>=0.16.0",
    "drawSvg~=2.0",
    "openpyxl",
    "glycorender[png]~=0.2.1"
]

[project.urls]
Homepage = "https://github.com/BojarLab/glycowork"

[project.optional-dependencies]
all = [
    "torch_geometric",
    "torch",
    "xgboost",
    "glyles",
    "pubchempy",
    "requests",
    "py3Dmol"
]
dev = [
    "nbdev",
    "torch_geometric",
    "torch",
    "xgboost",
    "glyles",
    "pubchempy",
    "requests",
    "py3Dmol",
    "pytest"
]
ml = [
    "torch_geometric",
    "torch",
    "xgboost"
]
chem = [
    "glyles",
    "pubchempy",
    "requests",
    "py3Dmol"
]

[tool.setuptools]
include-package-data = true
# This is a workaround for https://github.com/astral-sh/uv/issues/9513
license-files = []

[tool.setuptools.packages.find]
include = ["glycowork*"]
exclude = ["index_files*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.pkl", "*.jpg", "*.pt", "*.json"]